# city_time_zone_sqlite

./: .env  .gitignore  Cargo.toml  README.md  city_time_zone.db  city_time_zone.db-journal  seed.sh
assets/: tz_utc.json
examples/: .query.rs.swp  query.rs  seed.rs
migrations/2020-08-17-224047_create_city/: city_time_zone.db  down.sql  up.sql
src/: db.rs  lib.rs
src/cfg/: args.rs  mod.rs
src/db/: dto.rs  errors.rs  models.rs  repos.rs  schema.rs  seed.rs
