[package]
name = "city_time_zone_sqlite"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "^1.1.0", features = ["sqlite"] }
dotenv = "0.9.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
unidecode = "0.3.0"
clap = "2.33.3"
